--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div class="container" id="qa-block">
+    <div class="yellowishBlock">
+      <div class="txtCont">In programming languages, a closure is a technique for implementing lexically scoped name binding in a language with first-class functions. Operationally, a closure is a record storing a function together with an environment.</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="yellowishBlock">
+      <div class="txtCont">У програмуванні замиканням називають підпрограму, що виконується в середовищі, яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих змінних під час виконання.</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="yellowishBlock">
+      <div class="txtCont">Замыкание в программировании — функция первого класса, в теле которой присутствуют ссылки на переменные, объявленные вне тела этой функции в окружающем коде и не являющиеся её параметрами.</div>
+    </div>
+  </div>
 
 <script type="text/javascript" src="./main.js"></script>
 </body>
